# StockPortfolio

./: .env  .env.example  .gitignore  DOCS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
frontend/: index.html  script.js  style.css
